LlvmDSCompiler/DesignScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\pratapa.ADS\source\repos\LlvmDSCompiler\LlvmDSCompiler\DesignScript.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LlvmDSCompiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class DesignScriptParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, VAR=13, NEW=14, ERROR=15, BOOL=16, STRING=17, 
		DOUBLE=18, INT_=19, DEF=20, IN=21, IF=22, ELSE=23, NULL=24, RETURN=25, 
		FOR=26, WHILE=27, BREAK=28, CONTINUE=29, BoolLit=30, DoubleLit=31, IntLit=32, 
		Level=33, RepGuide=34, StringLit=35, Ident=36, WS=37, COMMENT=38, LINE_COMMENT=39, 
		LBRACK=40, RBRACK=41, DOTDOT=42, ADDADD=43, SUBSUB=44, ADD=45, SUB=46, 
		MUL=47, DIV=48, MOD=49, NOT=50, AND=51, OR=52, GT=53, GE=54, LT=55, LE=56, 
		NE=57, EQ=58;
	public const int
		RULE_program = 0, RULE_coreStmt = 1, RULE_funcDef = 2, RULE_imperFuncDef = 3, 
		RULE_emptyStmt = 4, RULE_funcDefArgList = 5, RULE_funcDefArg = 6, RULE_expr = 7, 
		RULE_primary = 8, RULE_parExpr = 9, RULE_lit = 10, RULE_exprList = 11, 
		RULE_atLevel = 12, RULE_repGuideList = 13, RULE_exprStmt = 14, RULE_returnStmt = 15, 
		RULE_imperAnnot = 16, RULE_imperBlock = 17, RULE_imperBlockReturnStmt = 18, 
		RULE_imperBlockAssignStmt = 19, RULE_imperBlockBody = 20, RULE_imperStmt = 21, 
		RULE_assignStmt = 22, RULE_typedIdent = 23, RULE_keyValue = 24, RULE_keyValues = 25, 
		RULE_typedIdentList = 26, RULE_identList = 27, RULE_qualifiedIdent = 28, 
		RULE_typeNameWithRank = 29, RULE_typeName = 30;
	public static readonly string[] ruleNames = {
		"program", "coreStmt", "funcDef", "imperFuncDef", "emptyStmt", "funcDefArgList", 
		"funcDefArg", "expr", "primary", "parExpr", "lit", "exprList", "atLevel", 
		"repGuideList", "exprStmt", "returnStmt", "imperAnnot", "imperBlock", 
		"imperBlockReturnStmt", "imperBlockAssignStmt", "imperBlockBody", "imperStmt", 
		"assignStmt", "typedIdent", "keyValue", "keyValues", "typedIdentList", 
		"identList", "qualifiedIdent", "typeNameWithRank", "typeName"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'('", "')'", "'{'", "'}'", "','", "'='", "'.'", "'#'", "'?'", 
		"':'", "'Imperative'", "'var'", "'new'", "'error'", "'bool'", "'string'", 
		"'double'", "'int'", "'def'", "'in'", "'if'", "'else'", "'null'", "'return'", 
		"'for'", "'while'", "'break'", "'continue'", null, null, null, null, null, 
		null, null, null, null, null, "'['", "']'", "'..'", "'++'", "'--'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'>'", "'>='", "'<'", 
		"'<='", "'!='", "'=='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "VAR", "NEW", "ERROR", "BOOL", "STRING", "DOUBLE", "INT_", "DEF", 
		"IN", "IF", "ELSE", "NULL", "RETURN", "FOR", "WHILE", "BREAK", "CONTINUE", 
		"BoolLit", "DoubleLit", "IntLit", "Level", "RepGuide", "StringLit", "Ident", 
		"WS", "COMMENT", "LINE_COMMENT", "LBRACK", "RBRACK", "DOTDOT", "ADDADD", 
		"SUBSUB", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", "GT", 
		"GE", "LT", "LE", "NE", "EQ"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DesignScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public DesignScriptParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public CoreStmtContext[] coreStmt() {
			return GetRuleContexts<CoreStmtContext>();
		}
		public CoreStmtContext coreStmt(int i) {
			return GetRuleContext<CoreStmtContext>(i);
		}
		public FuncDefContext[] funcDef() {
			return GetRuleContexts<FuncDefContext>();
		}
		public FuncDefContext funcDef(int i) {
			return GetRuleContext<FuncDefContext>(i);
		}
		public ImperFuncDefContext[] imperFuncDef() {
			return GetRuleContexts<ImperFuncDefContext>();
		}
		public ImperFuncDefContext imperFuncDef(int i) {
			return GetRuleContext<ImperFuncDefContext>(i);
		}
		public EmptyStmtContext[] emptyStmt() {
			return GetRuleContexts<EmptyStmtContext>();
		}
		public EmptyStmtContext emptyStmt(int i) {
			return GetRuleContext<EmptyStmtContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << DEF) | (1L << NULL) | (1L << RETURN) | (1L << BoolLit) | (1L << DoubleLit) | (1L << IntLit) | (1L << StringLit) | (1L << Ident) | (1L << LBRACK) | (1L << ADD) | (1L << SUB) | (1L << NOT))) != 0)) {
				{
				State = 66;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					State = 62; coreStmt();
					}
					break;

				case 2:
					{
					State = 63; funcDef();
					}
					break;

				case 3:
					{
					State = 64; imperFuncDef();
					}
					break;

				case 4:
					{
					State = 65; emptyStmt();
					}
					break;
				}
				}
				State = 70;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CoreStmtContext : ParserRuleContext {
		public AssignStmtContext assignStmt() {
			return GetRuleContext<AssignStmtContext>(0);
		}
		public ExprStmtContext exprStmt() {
			return GetRuleContext<ExprStmtContext>(0);
		}
		public ReturnStmtContext returnStmt() {
			return GetRuleContext<ReturnStmtContext>(0);
		}
		public ImperBlockContext imperBlock() {
			return GetRuleContext<ImperBlockContext>(0);
		}
		public ImperBlockReturnStmtContext imperBlockReturnStmt() {
			return GetRuleContext<ImperBlockReturnStmtContext>(0);
		}
		public ImperBlockAssignStmtContext imperBlockAssignStmt() {
			return GetRuleContext<ImperBlockAssignStmtContext>(0);
		}
		public CoreStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_coreStmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterCoreStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitCoreStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCoreStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CoreStmtContext coreStmt() {
		CoreStmtContext _localctx = new CoreStmtContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_coreStmt);
		try {
			State = 79;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 71; assignStmt();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 72; exprStmt();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 73; returnStmt();
				State = 74; Match(T__0);
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 76; imperBlock();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 77; imperBlockReturnStmt();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 78; imperBlockAssignStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefContext : ParserRuleContext {
		public ITerminalNode DEF() { return GetToken(DesignScriptParser.DEF, 0); }
		public TypedIdentContext typedIdent() {
			return GetRuleContext<TypedIdentContext>(0);
		}
		public FuncDefArgListContext funcDefArgList() {
			return GetRuleContext<FuncDefArgListContext>(0);
		}
		public CoreStmtContext[] coreStmt() {
			return GetRuleContexts<CoreStmtContext>();
		}
		public CoreStmtContext coreStmt(int i) {
			return GetRuleContext<CoreStmtContext>(i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterFuncDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitFuncDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefContext funcDef() {
		FuncDefContext _localctx = new FuncDefContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_funcDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(DEF);
			State = 82; typedIdent();
			State = 83; Match(T__1);
			State = 85;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==Ident) {
				{
				State = 84; funcDefArgList();
				}
			}

			State = 87; Match(T__2);
			State = 88; Match(T__3);
			State = 92;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << NULL) | (1L << RETURN) | (1L << BoolLit) | (1L << DoubleLit) | (1L << IntLit) | (1L << StringLit) | (1L << Ident) | (1L << LBRACK) | (1L << ADD) | (1L << SUB) | (1L << NOT))) != 0)) {
				{
				{
				State = 89; coreStmt();
				}
				}
				State = 94;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 95; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImperFuncDefContext : ParserRuleContext {
		public ImperAnnotContext imperAnnot() {
			return GetRuleContext<ImperAnnotContext>(0);
		}
		public ITerminalNode DEF() { return GetToken(DesignScriptParser.DEF, 0); }
		public TypedIdentContext typedIdent() {
			return GetRuleContext<TypedIdentContext>(0);
		}
		public ImperBlockBodyContext imperBlockBody() {
			return GetRuleContext<ImperBlockBodyContext>(0);
		}
		public FuncDefArgListContext funcDefArgList() {
			return GetRuleContext<FuncDefArgListContext>(0);
		}
		public ImperFuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imperFuncDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterImperFuncDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitImperFuncDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImperFuncDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImperFuncDefContext imperFuncDef() {
		ImperFuncDefContext _localctx = new ImperFuncDefContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_imperFuncDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; imperAnnot();
			State = 98; Match(DEF);
			State = 99; typedIdent();
			State = 100; Match(T__1);
			State = 102;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==Ident) {
				{
				State = 101; funcDefArgList();
				}
			}

			State = 104; Match(T__2);
			State = 105; Match(T__3);
			State = 106; imperBlockBody();
			State = 107; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EmptyStmtContext : ParserRuleContext {
		public EmptyStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_emptyStmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterEmptyStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitEmptyStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmptyStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EmptyStmtContext emptyStmt() {
		EmptyStmtContext _localctx = new EmptyStmtContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_emptyStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefArgListContext : ParserRuleContext {
		public FuncDefArgContext[] funcDefArg() {
			return GetRuleContexts<FuncDefArgContext>();
		}
		public FuncDefArgContext funcDefArg(int i) {
			return GetRuleContext<FuncDefArgContext>(i);
		}
		public FuncDefArgListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDefArgList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterFuncDefArgList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitFuncDefArgList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDefArgList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefArgListContext funcDefArgList() {
		FuncDefArgListContext _localctx = new FuncDefArgListContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_funcDefArgList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; funcDefArg();
			State = 116;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__5) {
				{
				{
				State = 112; Match(T__5);
				State = 113; funcDefArg();
				}
				}
				State = 118;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefArgContext : ParserRuleContext {
		public TypedIdentContext typedIdent() {
			return GetRuleContext<TypedIdentContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public FuncDefArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDefArg; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.EnterFuncDefArg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDesignScriptListener typedListener = listener as IDesignScriptListener;
			if (typedListener != null) typedListener.ExitFuncDefArg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDesignScriptVisitor<TResult> typedVisitor = visitor as IDesignScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDefArg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefArgContext funcDefArg() {
		FuncDefArgContext _localctx = new FuncDefArgContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_funcDefArg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; typedIdent();
			State = 122;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__6) {
				{
				State = 120; Match(T__6);
				State = 121; expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
